package seminareFour.onlineTicket;

import java.util.Date;


/**
 * @Компонент: User
 * @Версия: 1.0.0
 * @Описание: Этот компонент представляет пользователя системы. Определяет реализацию методов интерфейса UserActions.
 * @от 2023-02-10
 */
class User implements UserActions {

    /**
     * @apiNote Реализация метода авторизации пользователя в системе
     * @param username логин
     * @param password пароль
     * @return true - успешная авторизация, false - авторизация не пройдена
     */
    @Override
    public boolean authorize(String username, String password) {
        // Реализация метода
        return false;
    }

    /**
     * @apiNote Реализация метода выбор маршрута
     * @param routeId маршрут
     * @param time дата время отправления
     * @return true, если маршрут выбран, false - маршрут не выбран
     */
    @Override
    public boolean selectRoute(String routeId, Date time) {
        // Реализация метода
        return false;
    }

    /**
     * @apiNote Реализация метода проверки доступности билета на выбранный маршрут и время
     * @return true - билет доступен, false - билет не доступен
     */
    @Override
    public boolean checkTicketAvailability() {
        // Реализация метода
        return false;
    }

    /**
     * @apiNote Реализация метода проверки баланса пользователя
     * @return true - достаточно средств, false - недостаточно средств
     */
    @Override
    public boolean checkFunds() {
        // Реализация метода
        return false;
    }


    /**
     * @apiNote Попытка забронировать билет.
     * @return true, если бронирование успешно, false в противном случае.
     * @pre User должен быть авторизован и выбран маршрут.
     * @pre Билеты на выбранный маршрут и время должны быть доступны.
     * @pre У пользователя должно быть достаточно средств для бронирования.
     * @post Билет забронирован.
     * <p>
     * Этот метод позволяет пользователю попытаться забронировать билет на выбранный маршрут и время.
     * Для успешной бронировки необходимо выполнение следующих условий:
     * - Пользователь должен быть предварительно авторизован в системе (authorize).
     * - Пользователь должен выбрать конкретный маршрут и время (selectRoute).
     * - Должны быть доступны билеты на выбранный маршрут и время (checkTicketAvailability).
     * - У пользователя должно быть достаточно средств для бронирования (checkFunds).
     * <p>
     * Если все предусловия выполняются, билет будет успешно забронирован, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, бронирование не будет произведено, и метод вернет false.
     */
    public boolean reserveTicket() {
        // ... реализация метода ...
        // Проверка предусловий
        if (!isAuthorized()) {
            return false; // Пользователь не авторизован
        }

        if (!isRouteSelected()) {
            return false; // Маршрут не выбран
        }

        if (!checkTicketAvailability()) {
            return false; // Билеты не доступны
        }

        if (!checkFunds()) {
            return false; // Недостаточно средств
        }

        // Реализация бронирования билета
        if (performReservation()) {
            // Постусловие: Билет успешно забронирован
            return true;
        } else {
            return false; // Ошибка при бронировании
        }
    }

    /**
     * @ Приватный метод выполнения бронирования
     * @return true - ри успешном бронировании, иначе false
     */
    private boolean performReservation() {
        return true;
    }

    /**
     * @apiNote Приватный метод для проверки выполнения выбора маршрута
     * @return true - если маршрут выбран
     */
    private boolean isRouteSelected() {
        return true;
    }
    /**
     * @apiNote Приватный метод для проверки выполнения авторизации
     * @return true - если пользователь авторизован
     */
    private boolean isAuthorized() {
        return true;
    }

    public boolean deductFunds() {
        // Реализация метода
        return false;
    }


    public boolean confirmPurchase() {
        // Реализация метода
        return false;
    }


    public void updateTicketAvailability() {
        // Реализация метода
    }

    public boolean cancelReservation() {
        // Реализация метода
        return false;
    }

}